Feat :: Backgroun body

--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
-style.css
+:root {
+
+	--branco-principal: #FFFFFF;
+	--cinza-secundario: ;
+	--cor-de-fundo:#00030C;
+	--botao-azul: #167BF7;
+}
+
+body {
+	
+	background-color: var(--cor-de-fundo);
+	color: var(--branco-principal);
+}
+
