--- a/style.css
+++ b/style.css
@@ -12,3 +12,39 @@ body {
 	color: var(--branco-principal);
 }
 
+* {
+	margin: 0px;
+	padding: 0px;
+}
+
+.principal {
+
+	background-image: url("Background.png") ;
+	background-repeat no-repeat;
+	background-size: contain;
+}
+
+.container{
+
+	height: 100vh;
+	display: grid;
+	grid-template-columns: 50% 50%;
+}
+
+.container__botao{
+
+	background-color: var(--botao-azul);
+	border-radius: 5px;
+	padding: 1em;
+	color: var(--branco-principal);
+	display: block;
+}
+
+.botao_secundario {
+
+	background-color: transparent;
+	padding: 1em;
+	border: 2px solid var(--branco-principal);
+	display: block;
+ 
+}
