--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 :root {
 
 	--branco-principal: #FFFFFF;
-	--cinza-secundario: ;
-	--cor-de-fundo:#00030C;
+	--cinza-secundario: #C0C0C0;
+	--cor-de-fundo: #00030C;
 	--botao-azul: #167BF7;
+	--fonte-principal: 'Inter';
 }
 
 body {
 	
 	background-color: var(--cor-de-fundo);
 	color: var(--branco-principal);
+	font-family: var(--fonte-principal);
+	font-size: 16px;
+	font-weight: 400;
 }
 
 * {
@@ -38,6 +42,7 @@ body {
 	padding: 1em;
 	color: var(--branco-principal);
 	display: block;
+	text-decoration: none;
 }
 
 .botao_secundario {
@@ -46,5 +51,16 @@ body {
 	padding: 1em;
 	border: 2px solid var(--branco-principal);
 	display: block;
+	text-decoration: none;
  
+}
+
+.container__aviso {
+
+	font-size: 12px;
+	color: var(--cinza-secundario);
+}
+.titulo {
+	font-size: 28px;
+	font-weight: 700;
 }
